Feat: add login cronn and lib dontenv

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DB_HOST=localhost
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_NAME=unidas90_admin
 DB_USERNAME=root
 DB_PASSWORD=root
-DB_NAME=certificados
