--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "phpmailer/phpmailer": "^6.9",
         "setasign/fpdi": "^2.6",
-        "phpoffice/phpspreadsheet": "^3.8"
+        "phpoffice/phpspreadsheet": "^3.8",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
